--- a/custom.css
+++ b/custom.css
@@ -71,7 +71,7 @@ body {
 }
 
 #story_section {
-    background-image: url("final.png");
+    background-image: url("Final.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
