--- a/custom.css
+++ b/custom.css
@@ -68,6 +68,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    color: #0099d9;
 }
 
 #story_section {
